# relay-shell

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  renovate.json5  requirements-docs.txt  requirements.txt
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  security.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  gitleaks.yml  nightly-fuzz.yml  pip-audit.yml  release.yml  sbom.yml
audit/: 00-inventory.md  01-baseline.md  02-security-findings.md  03-final-report.md  2026-05-27-engagement.md  2026-06-01-engagement.md  2026-06-21-adversarial-engagement.md  2026-06-21-engagement.md  2026-07-15-adversarial-engagement.md  2026-07-15-engagement.md  2026-07-15-release-v0.3.0.md
deploy/: Caddyfile  install-edge.sh  install.sh  release-signing.pub
deploy/logrotate/: mcpx  relay-shell
deploy/systemd/: mcpx.service  relay-shell.service
deploy/systemd/mcpx.service.d/: hardening.conf
deploy/systemd/relay-shell.service.d/: hardening.conf
docs/: _config.yml  architecture.md  audit-shipper.md  auth.md  deployment.md  index.md  runbook.md  tools.md
docs/adr/: 0001-runtime-and-sdk.md  0002-no-sandbox-full-access.md  0003-tiered-authority.md  0004-edge-tls-automation.md  0005-codebase-validation.md  0006-seccomp-notify-audit-channel.md  0007-audit-hash-chain.md  0008-operating-guidance-prompt.md  0009-tier3-confirmation-broker.md  0010-rollback-verify-broker.md  0011-windows-openssh-powershell.md  README.md
scripts/: healthcheck.sh
src/mcpx/: __init__.py  __main__.py  audit.py  config.py  errors.py  inventory.py  policy.py  server.py  shelltools.py  sshpool.py
src/mcpx/auth/: oauth.py
src/relay_shell/: __init__.py  __main__.py  audit.py  broker.py  config.py  errors.py  inventory.py  metrics.py  patterns.py  policy.py  redaction.py  seccomp.py  server.py  sessions.py  shelltools.py  sshpool.py  util.py  verifier.py
src/relay_shell/auth/: __init__.py  oauth.py
tests/: conftest.py  test_audit.py  test_audit_tail_tool.py  test_broker.py  test_config.py  test_errors.py  test_fuzz.py  test_inventory.py  test_main.py  test_metrics.py  test_oauth.py  test_patterns.py  test_policy.py  test_prompts.py  test_redaction.py  test_resources.py  test_seccomp.py  test_server.py  test_sessions.py  test_shell.py  test_ssh_fanout_tool.py  test_ssh_integration.py  test_ssh_keyscan_tool.py  test_sshpool_unit.py  test_stdio_e2e.py  test_tool_wrappers.py  test_util.py  test_verifier.py
