[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-shell"
version = "0.1.0"
description = "A highly reliable, maximally capable MCP server for complete shell and SSH mastery: a governed relay in the shell/SSH path."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "rmednitzer" }]
keywords = ["mcp", "model-context-protocol", "shell", "ssh", "automation", "fleet", "relay"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: System :: Shells",
]
dependencies = [
  "mcp==1.27.1",
  "pydantic>=2.11",
  "pydantic-settings>=2.7",
  "asyncssh>=2.18",
  "uvicorn>=0.34",
  "starlette>=0.47",
  "anyio>=4.6",
]

[project.optional-dependencies]
http = ["PyJWT>=2.10", "cryptography>=44"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "coverage[toml]>=7.6",
  "pre-commit>=4.0",
  "PyJWT>=2.10",
  "cryptography>=44",
]

[project.scripts]
relay-shell = "relay_shell.__main__:main"

[project.urls]
Homepage = "https://github.com/rmednitzer/relay-shell"
Source = "https://github.com/rmednitzer/relay-shell"
Issues = "https://github.com/rmednitzer/relay-shell/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/relay_shell"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ASYNC", "PIE", "PTH", "BLE", "TID"]
# B008: FastMCP tools use callable defaults by design.
# RUF006: background tasks are owned by the session registry by design.
# ASYNC109: timeout params are intentional and enforced via asyncio.wait_for.
# ASYNC240: also flags non-blocking path-string ops (expanduser/join); the
#   only real blocking filesystem IO is offloaded via asyncio.to_thread.
ignore = ["B008", "RUF006", "ASYNC109", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B", "BLE", "PTH"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Synchronous HTTP clients have no place in this async codebase; they
# would block the event loop and bypass the async test fixtures. Use
# `httpx` (already pinned) or `anyio`+`asyncssh` instead.
"requests" = { msg = "Use httpx (async) instead; synchronous requests blocks the event loop." }
"urllib3" = { msg = "Use httpx (async) instead; synchronous urllib3 blocks the event loop." }

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
files = ["src/relay_shell"]

[[tool.mypy.overrides]]
module = ["asyncssh.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["relay_shell.server"]
# FastMCP's Context is generic and its tool decorator typing varies by SDK
# minor version; relax just these two checks for the wiring module.
disallow_untyped_decorators = false
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/relay_shell"]
# parallel + COVERAGE_PROCESS_START let the stdio e2e subprocess contribute;
# without it server.py's wrappers register near-zero. See `docs/runbook.md` §4.3.
parallel = true
branch = false

[tool.coverage.paths]
# Normalise subprocess paths back onto the in-repo source so combine merges them.
source = ["src/relay_shell", "*/src/relay_shell"]

[tool.coverage.report]
# Floor protects against regression; raise after sshpool/sessions/server tests
# climb (tracked as a follow-up in `docs/runbook.md` §7.2). Current measured
# baseline with subprocess collection enabled: ~78%.
fail_under = 75
show_missing = true
skip_empty = true
