[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-shell"
version = "0.2.0"
description = "A highly reliable, maximally capable MCP server for complete shell and SSH mastery: a governed relay in the shell/SSH path."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "rmednitzer" }]
keywords = ["mcp", "model-context-protocol", "shell", "ssh", "automation", "fleet", "relay"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Systems Administration",
  "Topic :: System :: Shells",
]
dependencies = [
  "mcp==1.28.1",
  "pydantic>=2.11",
  "pydantic-settings>=2.14.2",
  "asyncssh>=2.23.0",
  "uvicorn>=0.34",
  "starlette>=1.3.0",
  "anyio>=4.6",
]

[project.optional-dependencies]
http = ["PyJWT>=2.13.0", "cryptography>=48.0.1"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "coverage[toml]>=7.6",
  "pre-commit>=4.0",
  "PyJWT>=2.13.0",
  "cryptography>=48.0.1",
]

[project.scripts]
relay-shell = "relay_shell.__main__:main"

[project.urls]
Homepage = "https://github.com/rmednitzer/relay-shell"
Source = "https://github.com/rmednitzer/relay-shell"
Issues = "https://github.com/rmednitzer/relay-shell/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/relay_shell"]

# Ship the deploy templates inside the wheel so `relay-shell verify-deploy`
# can locate them via `importlib.resources` regardless of whether the
# operator installed from a wheel, a sdist, or the source tree. The
# source-tree (editable) fallback in `verifier.py` covers `pip install -e .`.
[tool.hatch.build.targets.wheel.force-include]
"deploy" = "relay_shell/_deploy"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ASYNC", "PIE", "PTH", "BLE", "TID"]
# B008: FastMCP tools use callable defaults by design.
# RUF006: background tasks are owned by the session registry by design.
# ASYNC109: timeout params are intentional and enforced via asyncio.wait_for.
# ASYNC240: also flags non-blocking path-string ops (expanduser/join); the
#   only real blocking filesystem IO is offloaded via asyncio.to_thread.
ignore = ["B008", "RUF006", "ASYNC109", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B", "BLE", "PTH"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Synchronous HTTP clients have no place in this async codebase; they
# would block the event loop and bypass the async test fixtures. Use
# `httpx` (already pinned) or `anyio`+`asyncssh` instead.
"requests" = { msg = "Use httpx (async) instead; synchronous requests blocks the event loop." }
"urllib3" = { msg = "Use httpx (async) instead; synchronous urllib3 blocks the event loop." }

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
files = ["src/relay_shell"]

[[tool.mypy.overrides]]
module = ["asyncssh.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["relay_shell.server"]
# FastMCP's Context is generic and its tool decorator typing varies by SDK
# minor version; relax just these two checks for the wiring module.
disallow_untyped_decorators = false
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# `-m "not fuzz"` so the default `pytest` run skips the hypothesis fuzz
# suite (which lives behind a marker and runs on a nightly schedule).
# Override with `pytest -m fuzz` (or `-m ""`) to include it locally.
addopts = "-q -m \"not fuzz\""
markers = [
  "fuzz: hypothesis-driven property-based fuzz tests for redact/classify; nightly only",
  "seccomp: seccomp-notify end-to-end tests; require Linux/x86_64/kernel>=5.5/CAP_SYS_ADMIN (auto-skip otherwise)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/relay_shell"]
# parallel + COVERAGE_PROCESS_START let the stdio e2e subprocess contribute;
# without it server.py's wrappers register near-zero. See `docs/runbook.md` §4.3.
parallel = true
branch = false

[tool.coverage.paths]
# Normalise subprocess paths back onto the in-repo source so combine merges them.
source = ["src/relay_shell", "*/src/relay_shell"]

[tool.coverage.report]
# Floor protects against regression; raised from 85% to 90% after the
# sshpool fault-injection tests (in `tests/test_ssh_integration.py`)
# lifted sshpool.py from ~69% to ~96% and overall to ~92% (B-022).
# Remaining gaps are deep error-suppression branches in `sessions.py`
# (OS-specific BlockingIOError / NotImplementedError paths) and
# `auth/oauth.py` (HTTP transport only). Current measured baseline
# with subprocess collection enabled: ~92%.
fail_under = 90
show_missing = true
skip_empty = true
